--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
           - stable
     steps:
       - uses: actions/checkout@v4
+      - uses: microsoft/setup-msbuild@v1.1
+      - uses: glslang/setup-masm@v1
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - run: cargo build --verbose
       - run: cargo test --verbose
