--- a/stack_buffer_overflow_token_stealing/Cargo.toml
+++ b/stack_buffer_overflow_token_stealing/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-win-kexp = { git = "https://github.com/glslang/win-kexp.git" }
+win-kexp = { path = "../../win-kexp" }
